--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rac-delta",
+  "description": "Storage agnostic delta patching implementation of rac-delta protocol for NodeJs. With streaming support and file reconstruction.",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,10 +12,15 @@
     "test": "vitest run",
     "test:watch": "vitest"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "delta",
+    "open",
+    "protocol",
+    "diff",
+    "delta-patching"
+  ],
+  "author": "Rubén Cruz contact@raccreativegames.com",
   "license": "MIT",
-  "description": "rac-delta protocol for delta-patching implementation in NodeJs",
   "dependencies": {
     "hash-wasm": "^4.12.0"
   },
