--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "1.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/raccreative/rac-delta-js.git"
+  },
   "files": [
     "dist"
   ],
